--- a/team.html
+++ b/team.html
@@ -197,12 +197,12 @@
                                                     <a href="about.html">About Us</a>
                                                 </li>
                                                 <li>
-                                                    <a href="causes.html">
-                                                        Causes
+                                                    <a href="campians.html">
+                                                        Campains
                                                         <i class="fa-regular fa-plus"></i>
                                                     </a>
                                                     <ul class="submenu">
-                                                        <li><a href="causes.html">Causes</a></li>
+                                                        <li><a href="campians.html">Causes</a></li>
                                                         <li><a href="causes-details.html">Causes Details</a></li>
                                                     </ul>
                                                 </li>
@@ -229,10 +229,7 @@
                                                     </ul>
                                                 </li>
                                                 <li>
-                                                    <a href="blog.html">
-                                                        Blog
-                                                        <i class="fa-regular fa-plus"></i>
-                                                    </a>
+                                                    
                                                     <ul class="submenu">
                                                         <li><a href="blog.html">Blog</a></li>
                                                         <li><a href="blog-details.html">Blog Details</a></li>
@@ -608,7 +605,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="causes.html">
+                                    <a href="campians.html">
                                         <i class="fa-solid fa-chevrons-right"></i>
                                         Causes
                                     </a>
