--- a/about.html
+++ b/about.html
@@ -197,12 +197,12 @@
                                                     <a  class="active" href="about.html">About Us</a>
                                                 </li>
                                                 <li>
-                                                    <a href="causes.html">
-                                                        Causes
+                                                    <a href="campians.html">
+                                                        Campains
                                                         <i class="fa-regular fa-plus"></i>
                                                     </a>
                                                     <ul class="submenu">
-                                                        <li><a href="causes.html">Causes</a></li>
+                                                        <li><a href="campians.html">Causes</a></li>
                                                         <li><a href="causes-details.html">Causes Details</a></li>
                                                     </ul>
                                                 </li>
@@ -228,16 +228,14 @@
                                                         <li><a href="error.html">Error Page</a></li>
                                                     </ul>
                                                 </li>
-                                                <li>
-                                                    <a href="blog.html">
-                                                        Blog
-                                                        <i class="fa-regular fa-plus"></i>
-                                                    </a>
+                                               <!-- <li> 
+                                                    
                                                     <ul class="submenu">
                                                         <li><a href="blog.html">Blog</a></li>
                                                         <li><a href="blog-details.html">Blog Details</a></li>
                                                     </ul>
-                                                </li>
+                                                </li>-->
+
                                                 <li>
                                                     <a href="contact.html">Contact Us</a>
                                                 </li>
@@ -700,7 +698,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="causes.html">
+                                    <a href="campians.html">
                                         <i class="fa-solid fa-chevrons-right"></i>
                                         Causes
                                     </a>
