--- a/blog.html
+++ b/blog.html
@@ -197,12 +197,12 @@
                                                     <a href="about.html">About Us</a>
                                                 </li>
                                                 <li>
-                                                    <a href="causes.html">
-                                                        Causes
+                                                    <a href="campians.html">
+                                                        Campains
                                                         <i class="fa-regular fa-plus"></i>
                                                     </a>
                                                     <ul class="submenu">
-                                                        <li><a href="causes.html">Causes</a></li>
+                                                        <li><a href="campians.html">Causes</a></li>
                                                         <li><a href="causes-details.html">Causes Details</a></li>
                                                     </ul>
                                                 </li>
@@ -228,7 +228,7 @@
                                                         <li><a href="error.html">Error Page</a></li>
                                                     </ul>
                                                 </li>
-                                                <li>
+                                               <!--<li>
                                                     <a class="active" href="blog.html">
                                                         Blog
                                                         <i class="fa-regular fa-plus"></i>
@@ -237,7 +237,7 @@
                                                         <li><a class="active" href="blog.html">Blog</a></li>
                                                         <li><a href="blog-details.html">Blog Details</a></li>
                                                     </ul>
-                                                </li>
+                                                </li>-->
                                                 <li>
                                                     <a href="contact.html">Contact Us</a>
                                                 </li>
@@ -314,14 +314,12 @@
                                     May 4, 2024
                                 </li>
                             </ul>
-                            <h3><a href="blog-details.html">The impact volunteer diversity and inclusion
-                                    initiatives</a>
-                            </h3>
+                            
                             <p class="text mb-20 mt-10">Pleasures and praising pains was born and will give sed
                                 expound
                                 the actual teaching</p>
-                            <a href="blog-details.html" class="theme-btn-2">VIEW DETAILS <i
-                                    class="fa-solid fa-arrow-up-right"></i></a>
+                            <!--<a href="blog-details.html" class="theme-btn-2">VIEW DETAILS <i
+                                    class="fa-solid fa-arrow-up-right"></i></a>-->
                         </div>
                     </div>
                 </div>
@@ -569,7 +567,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="causes.html">
+                                    <a href="campians.html">
                                         <i class="fa-solid fa-chevrons-right"></i>
                                         Causes
                                     </a>
