--- a/index.html
+++ b/index.html
@@ -197,12 +197,12 @@
                                                     <a href="about.html">About Us</a>
                                                 </li>
                                                 <li>
-                                                    <a href="causes.html">
-                                                        Causes
+                                                    <a href="campians.html">
+                                                        Campains
                                                         <i class="fa-regular fa-plus"></i>
                                                     </a>
                                                     <ul class="submenu">
-                                                        <li><a href="causes.html">Causes</a></li>
+                                                        <li><a href="campians.html">Causes</a></li>
                                                         <li><a href="causes-details.html">Causes Details</a></li>
                                                     </ul>
                                                 </li>
@@ -229,10 +229,7 @@
                                                     </ul>
                                                 </li>
                                                 <li>
-                                                    <a href="blog.html">
-                                                        Blog
-                                                        <i class="fa-regular fa-plus"></i>
-                                                    </a>
+                                                    
                                                     <ul class="submenu">
                                                         <li><a href="blog.html">Blog</a></li>
                                                         <li><a href="blog-details.html">Blog Details</a></li>
@@ -427,7 +424,7 @@
                         <h2 class="mt-15 wow fadeInUp" data-wow-delay=".3s">Popular <span>Causes</span></h2>
                     </div>
                     <div class="btn-wrapper mr-44">
-                        <a href="causes.html"> <span class="theme-btn"> View all </span><span class="arrow-btn"><i
+                        <a href="campians.html"> <span class="theme-btn"> View all </span><span class="arrow-btn"><i
                                     class="fa-solid fa-arrow-up-right"></i></span></a>
                     </div>
                 </div>
@@ -1139,7 +1136,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="causes.html">
+                                    <a href="campians.html">
                                         <i class="fa-solid fa-chevrons-right"></i>
                                         Causes
                                     </a>
