title-heading wow fadeInLeft

--- a/causes-details.html
+++ b/causes-details.html
@@ -203,7 +203,7 @@
                                                     </a>
                                                     <ul class="submenu">
                                                         <li><a href="campians.html">Causes</a></li>
-                                                        <li><a class="active" href="causes-details.html">Causes Details</a></li>
+                                                        <li><a class="active" href=" ">Causes Details</a></li>
                                                     </ul>
                                                 </li>
                                                 <li class="has-dropdown">
@@ -238,7 +238,7 @@
                                 </div>
                                 <div class="header-button">
                                     <div class="btn-wrapper wow fadeInUp" data-wow-delay=".5s">
-                                        <a href="causes-details.html"> <span class="theme-btn style3"> Donate Now
+                                        <a href=" "> <span class="theme-btn style3"> Donate Now
                                             </span><span class="arrow-btn style2"><i
                                                     class="fa-solid fa-arrow-up-right"></i></span></a>
                                     </div>
@@ -450,11 +450,11 @@
                                         <div
                                             class="head d-flex flex-wrap gap-2 align-items-center justify-content-between">
                                             <div class="con">
-                                                <h5><a href="causes-details.html">Albert Flores</a></h5>
+                                                <h5><a href=" ">Albert Flores</a></h5>
                                                 <span>March 20, 2024 at 2:37 pm</span>
                                             </div>
                                             <div class="btn">
-                                                <a href="causes-details.html" class="reply">Reply</a>
+                                                <a href=" " class="reply">Reply</a>
                                             </div>
                                         </div>
                                         <p class="mt-10 mb-0">Neque porro est qui dolorem ipsum quia quaed inventor
@@ -472,11 +472,11 @@
                                         <div
                                             class="head d-flex flex-wrap gap-2 align-items-center justify-content-between">
                                             <div class="con">
-                                                <h5><a href="causes-details.html">Alex Flores</a></h5>
+                                                <h5><a href=" ">Alex Flores</a></h5>
                                                 <span>March 20, 2024 at 2:37 pm</span>
                                             </div>
                                             <div class="btn">
-                                                <a href="causes-details.html" class="reply">Reply</a>
+                                                <a href=" " class="reply">Reply</a>
                                             </div>
                                         </div>
                                         <p class="mt-10 mb-0">Neque porro est qui dolorem ipsum quia quaed inventor
@@ -557,7 +557,7 @@
                                         </div>
                                         <div class="recent-content">
                                             <h6>
-                                                <a href="causes-details.html">
+                                                <a href=" ">
                                                     Help the helpless
                                                 </a>
                                             </h6>
@@ -579,7 +579,7 @@
                                         </div>
                                         <div class="recent-content">
                                             <h6>
-                                                <a href="causes-details.html">
+                                                <a href=" ">
                                                     Help the helpless
                                                 </a>
                                             </h6>
@@ -601,7 +601,7 @@
                                         </div>
                                         <div class="recent-content">
                                             <h6>
-                                                <a href="causes-details.html">
+                                                <a href=" ">
                                                     Help the helpless
                                                 </a>
                                             </h6>
@@ -672,10 +672,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="blog.html">
-                                        <i class="fa-solid fa-chevrons-right"></i>
-                                        Our Blog
-                                    </a>
+                                   
                                 </li>
                                 <li>
                                     <a href="contact.html">
