--- a/index.html
+++ b/index.html
@@ -36,31 +36,31 @@
             </div>
             <div class="txt-loading">
                 <span data-text-preloader="C" class="letters-loading">
-                    C
+                    B
                 </span>
                 <span data-text-preloader="H" class="letters-loading">
-                    H
-                </span>
-                <span data-text-preloader="A" class="letters-loading">
-                    A
-                </span>
-                <span data-text-preloader="R" class="letters-loading">
-                    R
-                </span>
-                <span data-text-preloader="I" class="letters-loading">
                     I
                 </span>
+                <span data-text-preloader="A" class="letters-loading">
+                    G
+                </span>
+                <span data-text-preloader="R" class="letters-loading">
+                    A
+                </span>
+                <span data-text-preloader="I" class="letters-loading">
+                    LL
+                </span>
                 <span data-text-preloader="T" class="letters-loading">
-                    T
+                    I
                 </span>
                 <span data-text-preloader="Y" class="letters-loading">
-                    Y
+                    A
                 </span>
                 <span data-text-preloader="O" class="letters-loading">
-                    O
+                    N
                 </span>
                 <span data-text-preloader="W" class="letters-loading">
-                    W
+                    CE
                 </span>
             </div>
             <p class="text-center">Loading</p>
@@ -203,7 +203,7 @@
                                                     </a>
                                                     <ul class="submenu">
                                                         <li><a href="campians.html">Causes</a></li>
-                                                        <li><a href="causes-details.html">Causes Details</a></li>
+                                                        
                                                     </ul>
                                                 </li>
                                                 <li class="has-dropdown">
@@ -244,7 +244,7 @@
                                 </div>
                                 <div class="header-button">
                                     <div class="btn-wrapper wow fadeInUp" data-wow-delay=".5s">
-                                        <a href="causes-details.html"> <span class="theme-btn style3"> Donate Now
+                                        <a href=" "> <span class="theme-btn style3"> Donate Now
                                             </span><span class="arrow-btn style2"><i
                                                     class="fa-solid fa-arrow-up-right"></i></span></a>
                                     </div>
@@ -281,7 +281,7 @@
                 <div class="banner-thumb-area">
                     <div class="circle cir36">
                         <img src="assets/img/shape/bannerCircleShape.svg" alt="shape">
-                        <a href="causes-details.html"><span class="arrow-btn"><i class="fa-solid fa-arrow-up-right"></i></span></a>
+                        <a href=" "><span class="arrow-btn"><i class="fa-solid fa-arrow-up-right"></i></span></a>
                     </div>
                     <div class="thumb-wrapper  image-anime">
                         <img src="assets/img/banner/bannerThumb1_1.jpg" alt="thumb">
@@ -375,7 +375,7 @@
                                 stop, and hold them back from, success.</p>
                         </div>
                         <div class="btn-wrapper wow fadeInUp" data-wow-delay=".5s">
-                            <a href="causes-details.html"> <span class="theme-btn"> Donate Now
+                            <a href=" "> <span class="theme-btn"> Donate Now
                                 </span><span class="arrow-btn"><i class="fa-solid fa-arrow-up-right"></i></span></a>
                         </div>
                         <div class="fancy-box-wrapper">
@@ -433,10 +433,10 @@
                     <div class="causes-card-item style1 wow fadeInUp" data-wow-delay=".2s">
                         <div class="causes-image  image-anime">
                             <img src="assets/img/causes/causesThumb1_1.jpg" alt="thumb">
-                            <div class="badge"><a href="causes-details.html">DONATE NOW</a></div>
+                            <div class="badge"><a href=" ">DONATE NOW</a></div>
                         </div>
                         <div class="causes-content">
-                            <h3 class="title"><a href="causes-details.html">Help the helpless man</a></h3>
+                            <h3 class="title"><a href=" ">Help the helpless man</a></h3>
                             <p>Together we can make a charity to supporting great purpose for helpless people.
                             </p>
                             <div class="progress-wrap">
@@ -450,7 +450,7 @@
                                 </div>
                             </div>
                             <div class="btn-wrapper">
-                                <a href="causes-details.html">View Details</a>
+                                <a href=" ">View Details</a>
                             </div>
                             <div class="fund d-flex align-items-center justify-content-between">
                                 <div class="goal">
@@ -465,10 +465,10 @@
                     <div class="causes-card-item style1 wow fadeInUp" data-wow-delay=".4s">
                         <div class="causes-image  image-anime">
                             <img src="assets/img/causes/causesThumb1_2.jpg" alt="thumb">
-                            <div class="badge"><a href="causes-details.html">DONATE NOW</a></div>
+                            <div class="badge"><a href=" ">DONATE NOW</a></div>
                         </div>
                         <div class="causes-content">
-                            <h3 class="title"><a href="causes-details.html">Raise fund for food</a></h3>
+                            <h3 class="title"><a href=" ">Raise fund for food</a></h3>
                             <p>Together we can make a charity to supporting great purpose for helpless people.
                             </p>
                             <div class="progress-wrap">
@@ -482,7 +482,7 @@
                                 </div>
                             </div>
                             <div class="btn-wrapper">
-                                <a href="causes-details.html">View Details</a>
+                                <a href=" ">View Details</a>
                             </div>
                             <div class="fund d-flex align-items-center justify-content-between">
                                 <div class="goal">
@@ -497,10 +497,10 @@
                     <div class="causes-card-item style1 wow fadeInUp" data-wow-delay=".6s">
                         <div class="causes-image  image-anime">
                             <img src="assets/img/causes/causesThumb1_3.jpg" alt="thumb">
-                            <div class="badge"><a href="causes-details.html">DONATE NOW</a></div>
+                            <div class="badge"><a href=" ">DONATE NOW</a></div>
                         </div>
                         <div class="causes-content">
-                            <h3 class="title"><a href="causes-details.html">Education for children</a></h3>
+                            <h3 class="title"><a href=" ">Education for children</a></h3>
                             <p>Together we can make a charity to supporting great purpose for helpless people.
                             </p>
                             <div class="progress-wrap">
@@ -514,7 +514,7 @@
                                 </div>
                             </div>
                             <div class="btn-wrapper">
-                                <a href="causes-details.html">View Details</a>
+                                <a href=" ">View Details</a>
                             </div>
                             <div class="fund d-flex align-items-center justify-content-between">
                                 <div class="goal">
@@ -1142,10 +1142,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="blog.html">
-                                        <i class="fa-solid fa-chevrons-right"></i>
-                                        Our Blog
-                                    </a>
+                                   
                                 </li>
                                 <li>
                                     <a href="contact.html">
