--- a/team.html
+++ b/team.html
@@ -203,7 +203,7 @@
                                                     </a>
                                                     <ul class="submenu">
                                                         <li><a href="campians.html">Causes</a></li>
-                                                        <li><a href="causes-details.html">Causes Details</a></li>
+                                                        
                                                     </ul>
                                                 </li>
                                                 <li class="has-dropdown">
@@ -244,7 +244,7 @@
                                 </div>
                                 <div class="header-button">
                                     <div class="btn-wrapper wow fadeInUp" data-wow-delay=".5s">
-                                        <a href="causes-details.html"> <span class="theme-btn style3"> Donate Now
+                                        <a href=" "> <span class="theme-btn style3"> Donate Now
                                             </span><span class="arrow-btn style2"><i
                                                     class="fa-solid fa-arrow-up-right"></i></span></a>
                                     </div>
@@ -611,10 +611,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="blog.html">
-                                        <i class="fa-solid fa-chevrons-right"></i>
-                                        Our Blog
-                                    </a>
+                                   
                                 </li>
                                 <li>
                                     <a href="contact.html">
