--- a/about.html
+++ b/about.html
@@ -203,7 +203,7 @@
                                                     </a>
                                                     <ul class="submenu">
                                                         <li><a href="campians.html">Causes</a></li>
-                                                        <li><a href="causes-details.html">Causes Details</a></li>
+                                                        
                                                     </ul>
                                                 </li>
                                                 <li class="has-dropdown">
@@ -245,7 +245,7 @@
                                 </div>
                                 <div class="header-button">
                                     <div class="btn-wrapper wow fadeInUp" data-wow-delay=".5s">
-                                        <a href="causes-details.html"> <span class="theme-btn style3"> Donate Now
+                                        <a href=" "> <span class="theme-btn style3"> Donate Now
                                             </span><span class="arrow-btn style2"><i
                                                     class="fa-solid fa-arrow-up-right"></i></span></a>
                                     </div>
@@ -378,7 +378,7 @@
                                 stop, and hold them back from, success.</p>
                         </div>
                         <div class="btn-wrapper wow fadeInUp" data-wow-delay=".5s">
-                            <a href="causes-details.html"> <span class="theme-btn"> Donate Now
+                            <a href=" "> <span class="theme-btn"> Donate Now
                                 </span><span class="arrow-btn"><i class="fa-solid fa-arrow-up-right"></i></span></a>
                         </div>
                         <div class="fancy-box-wrapper">
@@ -704,10 +704,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="blog.html">
-                                        <i class="fa-solid fa-chevrons-right"></i>
-                                        Our Blog
-                                    </a>
+                                   
                                 </li>
                                 <li>
                                     <a href="contact.html">
