--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                             </li>
                         </ul>
                         <div class="header-button mt-4">
-                            <a href="contact.html" class="theme-btn text-center">
+                            <a href="admin.html" class="theme-btn text-center">
                                 <span>Get A Quote<i class="fa-solid fa-arrow-right-long"></i></span>
                             </a>
                         </div>
@@ -230,7 +230,7 @@
                                                 </li>
                                                 
                                                 <li>
-                                                    <a href="contact.html">Contact Us</a>
+                                                    <a href="admin.html">Admin Page</a>
                                                 </li>
                                             </ul>
                                         </nav>
@@ -297,7 +297,7 @@
                             <p class="text">When deciding which charity to donate to, it important to do your
                                 research.</p>
                         </div>
-                        <div class="btn-wrapper"><a href="contact.html"><span class="arrow-btn style2"><i
+                        <div class="btn-wrapper"><a href="admin.html"><span class="arrow-btn style2"><i
                                         class="fa-solid fa-arrow-up-right"></i></span></a></div>
                     </div>
                     <div class="service-item style1">
@@ -308,7 +308,7 @@
                             <p class="text">When deciding which charity to donate to, it important to do your
                                 research.</p>
                         </div>
-                        <div class="btn-wrapper"><a href="contact.html"><span class="arrow-btn style2"><i
+                        <div class="btn-wrapper"><a href="admin.html"><span class="arrow-btn style2"><i
                                         class="fa-solid fa-arrow-up-right"></i></span></a></div>
                     </div>
                     <div class="service-item style1">
@@ -319,7 +319,7 @@
                             <p class="text">When deciding which charity to donate to, it important to do your
                                 research.</p>
                         </div>
-                        <div class="btn-wrapper"><a href="contact.html"><span class="arrow-btn style2"><i
+                        <div class="btn-wrapper"><a href="admin.html"><span class="arrow-btn style2"><i
                                         class="fa-solid fa-arrow-up-right"></i></span></a></div>
                     </div>
                     <div class="service-item style1">
@@ -330,7 +330,7 @@
                             <p class="text">When deciding which charity to donate to, it important to do your
                                 research.</p>
                         </div>
-                        <div class="btn-wrapper"><a href="contact.html"><span class="arrow-btn style2"><i
+                        <div class="btn-wrapper"><a href="admin.html"><span class="arrow-btn style2"><i
                                         class="fa-solid fa-arrow-up-right"></i></span></a></div>
                     </div>
                 </div>
@@ -459,7 +459,7 @@
                     <div class="causes-card-item style1 wow fadeInUp" data-wow-delay=".4s">
                         <div class="causes-image  image-anime">
                             <img src="assets/img/causes/causesThumb1_2.jpg" alt="thumb">
-                            <div class="badge"><a href=" ">DONATE NOW</a></div>
+                            <div class="badge"><a href="causes-details.html">DONATE NOW</a></div>
                         </div>
                         <div class="causes-content">
                             <h3 class="title"><a href=" ">Raise fund for food</a></h3>
@@ -491,7 +491,7 @@
                     <div class="causes-card-item style1 wow fadeInUp" data-wow-delay=".6s">
                         <div class="causes-image  image-anime">
                             <img src="assets/img/causes/causesThumb1_3.jpg" alt="thumb">
-                            <div class="badge"><a href=" ">DONATE NOW</a></div>
+                            <div class="badge"><a href="causes-details.html">DONATE NOW</a></div>
                         </div>
                         <div class="causes-content">
                             <h3 class="title"><a href=" ">Education for children</a></h3>
@@ -780,7 +780,7 @@
                         </div>
 
                         <div class="btn-wrapper wow fadeInUp" data-wow-delay=".5s">
-                            <a href="contact.html"> <span class="theme-btn style3"> Donate Now
+                            <a href="admin.html"> <span class="theme-btn style3"> Donate Now
                                 </span><span class="arrow-btn style2"><i
                                         class="fa-solid fa-arrow-up-right"></i></span></a>
                         </div>
@@ -919,7 +919,7 @@
                                         team!</p>
                                 </div>
                             </div>
-                            <a href="contact.html" class="theme-btn style2">Get in touch</a>
+                            <a href="admin.html" class="theme-btn style2">Get in touch</a>
                         </div>
                     </div>
                 </div>
@@ -1139,9 +1139,9 @@
                                    
                                 </li>
                                 <li>
-                                    <a href="contact.html">
+                                    <a href="admin.html">
                                         <i class="fa-solid fa-chevrons-right"></i>
-                                        Contact Us
+                                        Admin Page
                                     </a>
                                 </li>
                             </ul>
@@ -1150,11 +1150,11 @@
                     <div class="col-xl-3 col-lg-4 col-md-6 ps-lg-5 wow fadeInUp" data-wow-delay=".6s">
                         <div class="single-footer-widget">
                             <div class="widget-head">
-                                <h3>Contact Us</h3>
+                                <h3>Admin Page</h3>
                             </div>
                             <ul class="list-area">
                                 <li>
-                                    <a href="contact.html">
+                                    <a href="admin.html">
                                         2972 Westheimer Rd. Santa Ana, Illinois 85486
                                     </a>
                                 </li>
@@ -1176,10 +1176,10 @@
                             <div class="widget-head">
                                 <h3>Have a Project in Your Mind?</h3>
                             </div>
-                            <a href="contact.html">
+                            <a href="admin.html">
                                 <div class="circle py-5 px-3 w-50 bg-theme2 text-center rounded-circle mb-3">
                                     <span><i class="fa-solid fa-arrow-up-right"></i></span>
-                                    <h4>Contact US</h4>
+                                    <h4>Admin Page</h4>
                                 </div>
                             </a>
 
@@ -1200,7 +1200,7 @@
                     </p>
                     <ul class="brand-logo wow fadeInRight" data-wow-delay=".5s">
                         <li>
-                            <a class="text-white" href="contact.html">
+                            <a class="text-white" href="admin.html">
                                 Designed By <span class="text-underline text-theme-color2">Exdesigners</span>
                             </a>
                         </li>
