--- a/about.html
+++ b/about.html
@@ -152,7 +152,7 @@
                             </li>
                         </ul>
                         <div class="header-button mt-4">
-                            <a href="contact.html" class="theme-btn text-center">
+                            <a href="admin.html" class="theme-btn text-center">
                                 <span>Get A Quote<i class="fa-solid fa-arrow-right-long"></i></span>
                             </a>
                         </div>
@@ -237,7 +237,7 @@
                                                 </li>-->
 
                                                 <li>
-                                                    <a href="contact.html">Contact Us</a>
+                                                    <a href="admin.html">Admin Page</a>
                                                 </li>
                                             </ul>
                                         </nav>
@@ -307,7 +307,7 @@
                         <p class="text">Children growing up in poverty face numerous additional stressors and negative.
                         </p>
                     </div>
-                    <div class="btn-wrapper"><a href="contact.html"><span class="arrow-btn style2"><i
+                    <div class="btn-wrapper"><a href="admin.html"><span class="arrow-btn style2"><i
                                     class="fa-solid fa-arrow-up-right"></i></span></a></div>
                 </div>
                 <div class="service-item style2">
@@ -318,7 +318,7 @@
                         <p class="text">Supporting a child provides them with the opportunity to see their struggles.
                         </p>
                     </div>
-                    <div class="btn-wrapper"><a href="contact.html"><span class="arrow-btn style2"><i
+                    <div class="btn-wrapper"><a href="admin.html"><span class="arrow-btn style2"><i
                                     class="fa-solid fa-arrow-up-right"></i></span></a></div>
                 </div>
                 <div class="service-item style2">
@@ -328,7 +328,7 @@
                         <h3 class="title">Provert free</h3>
                         <p class="text">As a support, you can help disadvantaged children overcome their greatest.</p>
                     </div>
-                    <div class="btn-wrapper"><a href="contact.html"><span class="arrow-btn style2"><i
+                    <div class="btn-wrapper"><a href="admin.html"><span class="arrow-btn style2"><i
                                     class="fa-solid fa-arrow-up-right"></i></span></a></div>
                 </div>
                 <div class="service-item style2">
@@ -339,7 +339,7 @@
                         <p class="text">"Unite The Society" could be a powerful phrase for a campaign, initiative, or
                             project.</p>
                     </div>
-                    <div class="btn-wrapper"><a href="contact.html"><span class="arrow-btn style2"><i
+                    <div class="btn-wrapper"><a href="admin.html"><span class="arrow-btn style2"><i
                                     class="fa-solid fa-arrow-up-right"></i></span></a></div>
                 </div>
             </div>
@@ -378,7 +378,7 @@
                                 stop, and hold them back from, success.</p>
                         </div>
                         <div class="btn-wrapper wow fadeInUp" data-wow-delay=".5s">
-                            <a href=" "> <span class="theme-btn"> Donate Now
+                            <a href="causes-details.html"> <span class="theme-btn"> Donate Now
                                 </span><span class="arrow-btn"><i class="fa-solid fa-arrow-up-right"></i></span></a>
                         </div>
                         <div class="fancy-box-wrapper">
@@ -707,9 +707,9 @@
                                    
                                 </li>
                                 <li>
-                                    <a href="contact.html">
+                                    <a href="admin.html">
                                         <i class="fa-solid fa-chevrons-right"></i>
-                                        Contact Us
+                                        Admin Page
                                     </a>
                                 </li>
                             </ul>
@@ -718,11 +718,11 @@
                     <div class="col-xl-3 col-lg-4 col-md-6 ps-lg-5 wow fadeInUp" data-wow-delay=".6s">
                         <div class="single-footer-widget">
                             <div class="widget-head">
-                                <h3>Contact Us</h3>
+                                <h3>Admin Page</h3>
                             </div>
                             <ul class="list-area">
                                 <li>
-                                    <a href="contact.html">
+                                    <a href="admin.html">
                                         2972 Westheimer Rd. Santa Ana, Illinois 85486
                                     </a>
                                 </li>
@@ -744,10 +744,10 @@
                             <div class="widget-head">
                                 <h3>Have a Project in Your Mind?</h3>
                             </div>
-                            <a href="contact.html">
+                            <a href="admin.html">
                                 <div class="circle py-5 px-3 w-50 bg-theme2 text-center rounded-circle mb-3">
                                     <span><i class="fa-solid fa-arrow-up-right"></i></span>
-                                    <h4>Contact US</h4>
+                                    <h4>Admin Page</h4>
                                 </div>
                             </a>
 
@@ -768,7 +768,7 @@
                     </p>
                     <ul class="brand-logo wow fadeInRight" data-wow-delay=".5s">
                         <li>
-                            <a class="text-white" href="contact.html">
+                            <a class="text-white" href="admin.html">
                                 Designed By <span class="text-underline text-theme-color2">Exdesigners</span>
                             </a>
                         </li>
