--- a/causes-details.html
+++ b/causes-details.html
@@ -152,7 +152,7 @@
                             </li>
                         </ul>
                         <div class="header-button mt-4">
-                            <a href="contact.html" class="theme-btn text-center">
+                            <a href="admin.html" class="theme-btn text-center">
                                 <span>Get A Quote<i class="fa-solid fa-arrow-right-long"></i></span>
                             </a>
                         </div>
@@ -230,7 +230,7 @@
                                                 </li>
                                                 
                                                 <li>
-                                                    <a href="contact.html">Contact Us</a>
+                                                    <a href="admin.html">Admin Page</a>
                                                 </li>
                                             </ul>
                                         </nav>
@@ -540,7 +540,7 @@
                                         facilisi duis id. In tristique varius nisl ultricies nunc.In tristique varius
                                         nisl ultricies nunc</p>
                                     <div class="btn-wrapper mt-4 wow fadeInUp" data-wow-delay=".5s">
-                                        <a href="contact.html"> <span class="theme-btn style3"> Contact Us
+                                        <a href="admin.html"> <span class="theme-btn style3"> Admin Page
                                             </span><span class="arrow-btn style2"><i
                                                     class="fa-solid fa-arrow-up-right"></i></span></a>
                                     </div>
@@ -675,9 +675,9 @@
                                    
                                 </li>
                                 <li>
-                                    <a href="contact.html">
+                                    <a href="admin.html">
                                         <i class="fa-solid fa-chevrons-right"></i>
-                                        Contact Us
+                                        Admin Page
                                     </a>
                                 </li>
                             </ul>
@@ -686,11 +686,11 @@
                     <div class="col-xl-3 col-lg-4 col-md-6 ps-lg-5 wow fadeInUp" data-wow-delay=".6s">
                         <div class="single-footer-widget">
                             <div class="widget-head">
-                                <h3>Contact Us</h3>
+                                <h3>Admin Page</h3>
                             </div>
                             <ul class="list-area">
                                 <li>
-                                    <a href="contact.html">
+                                    <a href="admin.html">
                                         2972 Westheimer Rd. Santa Ana, Illinois 85486
                                     </a>
                                 </li>
@@ -712,10 +712,10 @@
                             <div class="widget-head">
                                 <h3>Have a Project in Your Mind?</h3>
                             </div>
-                            <a href="contact.html">
+                            <a href="admin.html">
                                 <div class="circle py-5 px-3 w-50 bg-theme2 text-center rounded-circle mb-3">
                                     <span><i class="fa-solid fa-arrow-up-right"></i></span>
-                                    <h4>Contact US</h4>
+                                    <h4>Admin Page</h4>
                                 </div>
                             </a>
 
@@ -736,7 +736,7 @@
                     </p>
                     <ul class="brand-logo wow fadeInRight" data-wow-delay=".5s">
                         <li>
-                            <a class="text-white" href="contact.html">
+                            <a class="text-white" href="admin.html">
                                 Designed By <span class="text-underline text-theme-color2">Exdesigners</span>
                             </a>
                         </li>
